Correct BUG on resultset shifting. https://github.com/vert-x3/vertx-cassandra-client/issues/84

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>vertx-cassandra-client</artifactId>
-  <version>4.5.7</version>
+  <version>4.5.7-WL</version>
 
   <properties>
     <stack.version>4.5.7</stack.version>
